# BachelorThesisCode

./: README.md
SolarCurveTracer1.0/: CMakeLists.txt  LICENSE  README.md  main_sct16.cpp
SolarCurveTracer1.0/hal/gpio/: Gpio.c
SolarCurveTracer1.0/hal/i2c/: I2c.c
SolarCurveTracer1.0/hal/sleep/: Sleep.c
SolarCurveTracer1.0/hal/spi/: Spi.c
SolarCurveTracer1.0/hal/uart/: Uart.c
SolarCurveTracer1.0/include/Pac1934/: Pac193xTypedefs.h
SolarCurveTracer1.0/include/VEML7700/: VEML7700.h
SolarCurveTracer1.0/include/spi/: Spi.h
SolarCurveTracer1.0/include/tmp1075/: tmp1075.hpp
SolarCurveTracer1.0/lib/no-OS-FatFS-SD-SPI-RPi-Pico/simple_example/: hw_config.c
SolarCurveTracer1.0/main_examples/: main_PAC.cpp  main_sct256.cpp
SolarCurveTracer1.0/src/Pac1934/: Pac193x.c  Pac193xInternal.h
SolarCurveTracer1.0/src/VEML7700/: VEML7700.cpp
SolarCurveTracer1.0/src/mcp23017/: mcp23017.c
SolarCurveTracer1.0/src/tmp1075/: tmp1075.cpp
